fixed overhang on dropdown menu, realigned dropdown menu and Login button

--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -1,3 +1,24 @@
 li {
     list-style-type: none;
 }
+ul {
+    margin: 0
+}
+
+.nav-container {
+    margin: 0;
+}
+
+.navbar {
+    width: 100%;
+    margin-right: 125rem;
+}
+.dropdown-menu {
+    right: 0;
+    left: auto;
+}
+
+.dropdown-menu.show {
+    margin-left: -100px; /* Adjust as needed */
+}
+
